--- a/backend/PetCareX.Api.csproj
+++ b/backend/PetCareX.Api.csproj
@@ -4,8 +4,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <!-- Re-enable CS1591 to require XML documentation on public members -->
-    <!-- Removed suppression for 1591; fix missing XML summaries in models instead -->
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
