--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=sqladmin1234.database.windows.net;Database=petcarxDB;User Id=sqladmin;Password=12345678aA0!;TrustServerCertificate=True;Encrypt=True;"
   },
   "Logging": {
     "LogLevel": {
