--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=;Database=PetCare;Integrated Security=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-OC90D75;Database=PetCare;Integrated Security=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
